--- a/css/main.css
+++ b/css/main.css
@@ -500,7 +500,7 @@ footer {
     margin-bottom: 15px;
   }
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 768px) {
   .portfolio-indent {
     justify-content: center;
   }
@@ -551,14 +551,6 @@ footer {
 }
 .main-button:active {
   background-color: var(--accent-color);
-}
-
-.employees__card {
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
-  margin-top: 30px;
-  margin-left: 30px;
-  background-color: var(--text-color);
 }
 
 .our-team {
@@ -1079,10 +1071,33 @@ footer {
 }
 
 @media screen and (min-width: 480px) {
+  .portfolio-headers {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
+    margin-bottom: 4px;
+    margin-top: 0;
+  }
+  .headers-veiw {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.8;
+    letter-spacing: 0.03em;
+    color: var(--feedback-color);
+    margin-bottom: 0;
+    margin-top: 0;
+  }
   .employees__card-size {
     width: 450px;
     -o-object-fit: cover;
        object-fit: cover;
+  }
+  .portfolio-background {
+    padding-top: 60px;
+    padding-bottom: 94px;
   }
   .text-portfolio {
     align-items: center;
@@ -1115,7 +1130,6 @@ footer {
   }
   .employees__card-portfolio {
     margin-top: 30px;
-    margin-left: 30px;
   }
   .employees__card-portfolio-link {
     display: block;
@@ -1128,8 +1142,19 @@ footer {
   .employees__card-portfolio-link:focus, .employees__card-portfolio-link:hover {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
   }
+  .employees__card {
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+    background-color: var(--text-color);
+  }
+  .employees__card:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
 @media screen and (min-width: 768px) {
+  .employees__card-portfolio {
+    margin-left: 30px;
+  }
   .employees__card-size {
     width: 354px;
   }
@@ -1148,33 +1173,21 @@ footer {
     width: 354px;
     height: 140px;
   }
+  .portfolio-background {
+    padding-top: 94px;
+  }
 }
-.portfolio-headers {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
-  margin-bottom: 4px;
-  margin-top: 0;
+@media screen and (min-width: 1200px) {
+  .text-portfolio {
+    width: 370px;
+  }
+  .employees__card-size {
+    width: 370px;
+  }
+  .border-color {
+    width: 370px;
+  }
 }
-
-.headers-veiw {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.8;
-  letter-spacing: 0.03em;
-  color: var(--feedback-color);
-  margin-bottom: 0;
-  margin-top: 0;
-}
-
-.portfolio-background {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
 @media screen and (max-width: 767px) {
   .employees__card-pictures {
     width: 450px;
