--- a/sass/layout/portfolio/_potrfolio-links.scss
+++ b/sass/layout/portfolio/_potrfolio-links.scss
@@ -1,14 +1,36 @@
 @media screen and (min-width:480px){
+  .portfolio-headers {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
+    margin-bottom: 4px;
+    margin-top: 0;
+  }
+  .headers-veiw {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.8;
+    letter-spacing: 0.03em;
+    color: var(--feedback-color);
+    margin-bottom: 0;
+    margin-top: 0;
+  }
   .employees__card-size{
     width: 450px;
     object-fit: cover;
+  }
+  .portfolio-background {
+    padding-top: 60px;
+    padding-bottom: 94px;
   }
   .text-portfolio {
     align-items: center;
     justify-content: center;
     display: flex;
     width: 450px;
-    // width: 370px;
     height: 294px;
     background: rgba(33, 150, 243, 0.9);
     position: absolute;
@@ -36,7 +58,6 @@
   }
   .employees__card-portfolio {
     margin-top: 30px;
-    margin-left: 30px;
   }
   .employees__card-portfolio-link {
     display: block;
@@ -51,8 +72,20 @@
         1px 4px 6px rgba(0, 0, 0, 0.16);
     }
   }
+  .employees__card {
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+      0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+    background-color: var(--text-color);
+  }
+  .employees__card:not(:last-child){
+    margin-bottom: 30px;
+  }
 }
 @media screen and (min-width:768px){
+  .employees__card-portfolio{
+    margin-left: 30px;
+  }
   .employees__card-size{
     width: 354px;
   }
@@ -72,29 +105,20 @@
     width: 354px;
     height: 140px;
   }
-}
-.portfolio-headers {
-  font-style: normal;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
-  margin-bottom: 4px;
-  margin-top: 0;
-}
-.headers-veiw {
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.8;
-  letter-spacing: 0.03em;
-  color: var(--feedback-color);
-  margin-bottom: 0;
-  margin-top: 0;
+  .portfolio-background {
+    padding-top: 94px;
+  }
+
 }
 
-.portfolio-background {
-  padding-top: 94px;
-  padding-bottom: 94px;
+@media screen and (min-width:1200px){
+  .text-portfolio {
+    width: 370px;
+  }
+  .employees__card-size{
+    width: 370px;
+  }
+  .border-color{
+    width: 370px;
+  }
 }
-
