--- a/css/main.css
+++ b/css/main.css
@@ -816,7 +816,7 @@ footer {
   .main-section-color {
     width: 100%;
     height: 400px;
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/images/background/background-1200.jpg");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("./images/background/background-1200.jpg");
     background-size: cover;
     background-color: var(--background-color);
     padding-top: 118px;
@@ -877,7 +877,7 @@ footer {
 
 @media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .main-section-color {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/images/background/background-1200@x2.jpg");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("./images/background/background-1200@x2.jpg");
   }
 }
 @media screen and (min-width: 480px) {
