--- a/sass/base/main/_main-section.scss
+++ b/sass/base/main/_main-section.scss
@@ -7,7 +7,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("/images/background/background-1200.jpg");
+      url("./images/background/background-1200.jpg");
     background-size: cover;
     background-color: var(--background-color);
     padding-top: 118px;
@@ -77,7 +77,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
         ), 
-      url("/images/background/background-1200@x2.jpg");
+      url("./images/background/background-1200@x2.jpg");
     }
   }
   
