--- a/css/main.css
+++ b/css/main.css
@@ -1151,11 +1151,13 @@ footer {
     margin-top: 30px;
   }
   .employees__card-portfolio-link {
-    display: block;
+    display: flex;
+    flex-direction: column;
     text-decoration: none;
     color: var(--primary-text-color);
     position: relative;
     overflow: hidden;
+    height: 100%;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   .employees__card-portfolio-link:focus, .employees__card-portfolio-link:hover {
@@ -1196,13 +1198,7 @@ footer {
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .border-color {
     width: 354px;
-    display: flex;
-    flex-direction: column;
-  }
-  .portfolio-content {
-    display: flex;
-    flex-direction: column;
-    flex-basis: 104px;
+    flex-grow: 1;
   }
   .portfolio-background {
     padding-top: 94px;
