--- a/sass/layout/portfolio/_potrfolio-links.scss
+++ b/sass/layout/portfolio/_potrfolio-links.scss
@@ -60,11 +60,13 @@
     margin-top: 30px;
   }
   .employees__card-portfolio-link {
-    display: block;
+    display: flex;
+    flex-direction: column;
     text-decoration: none;
     color: var(--primary-text-color);
     position: relative;
     overflow: hidden;
+    height: 100%;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     &:focus,
     &:hover {
@@ -113,13 +115,7 @@
   
   .border-color{
     width: 354px;
-    display:flex;
-    flex-direction: column;
-  }
-  .portfolio-content{
-    display:flex;
-    flex-direction: column;
-    flex-basis: 104px;
+    flex-grow: 1;
   }
   .portfolio-background {
     padding-top: 94px;
