--- a/sass/base/main/_main-section.scss
+++ b/sass/base/main/_main-section.scss
@@ -6,7 +6,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("../images/background/background-480.jpg");
+      url("/images/background/background-480.jpg");
     background-size: cover;
     background-color: var(--background-color);
     padding-top: 118px;
@@ -38,7 +38,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("../images/background/background-480.jpg");
+      url("/images/background/background-480.jpg");
     background-size: cover;
     background-color: var(--background-color);
     padding-top: 118px;
@@ -58,7 +58,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("../images/background/background-768.jpg");
+      url("/images/background/background-768.jpg");
   }
 }
 @media screen and (min-width: 1200px) {
@@ -67,7 +67,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("../images/background/background-1200.jpg");
+      url("/images/background/background-1200.jpg");
     width: 1600px;
     height: 600px;
     margin-left: auto;
@@ -105,7 +105,7 @@
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)
         ),
-        url("../images/background/background-480@x2.jpg");
+        url("/images/background/background-480@x2.jpg");
     }
 
     @media screen and (min-width: 768px) {
@@ -113,7 +113,7 @@
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)
         ),
-        url("../images/background/background-768@x2.jpg");
+        url("/images/background/background-768@x2.jpg");
     }
 
     @media screen and (min-width: 1200px) {
@@ -121,7 +121,7 @@
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)
         ),
-        url("../images/background/background-1200@x2.jpg");
+        url("/images/background/background-1200@x2.jpg");
     }
   }
 }
